--- a/static/css/home/navigation-block.css
+++ b/static/css/home/navigation-block.css
@@ -11,6 +11,7 @@
 }
 
 #header-navigation h1{
+    padding-top: 30px;
     margin-bottom: 30px;
     text-align: center;
     transition: all 0.2s ease-in-out;
