--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="{{url_for('static', filename='css/navbar.css')}}">
+<link rel="stylesheet" href="{{url_for('static', filename='css/home/navbar.css')}}">
 <nav>
     <ul id="nav">
         <li><a href="#about">О нас</a></li>
