--- a/static/css/home/gallery.css
+++ b/static/css/home/gallery.css
@@ -1,5 +1,42 @@
-#idk{
+#gallery{
     width: 100%;
-    height: 800px;
     background-color: var(--green);
+    padding-top: 30px;
+    padding-bottom: 100px;
+}
+
+#gallery h1{
+    margin-bottom: 40px;
+}
+
+#gallery-content{
+    display: flex;
+    justify-content: space-between;
+}
+
+#gallery-posts{
+    width: 300px;
+    height: 510px;
+    overflow-y: auto;
+}
+
+.swiper-gallery{
+    overflow: hidden;
+    width: 900px;
+    height: 500px;
+    background-color: rgb(29, 29, 29);
+}
+
+.gallery-block-img{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.gallery-block-img img{
+    max-width: 850px;
+    max-height: 450px;
+    margin: 0 auto;
+    border-radius: 10px;
 }
