--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,6 +2,20 @@
     --green: rgb(68, 163, 68);
 }
 
+::-webkit-scrollbar{
+    width: 15px;
+}
+
+::-webkit-scrollbar-track{
+    opacity: 0;
+    background-color: rgba(255, 255, 255, 0);
+}
+
+::-webkit-scrollbar-thumb{
+    border-radius: 10px;
+    background-color: white;
+}
+
 body{
     font-family: Ubuntu;
     margin: 0;
