Fixed old bag with slider

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,6 +1,7 @@
 <link rel="stylesheet" href="{{url_for('static', filename='css/home/navbar.css')}}">
 <nav>
     <ul id="nav">
+        <li><a href="/">Главная</a></li>
         <li><a href="#about">О нас</a></li>
         <li><a href="/news">Новости</a></li>
         <li><a href="#">Галерея</a></li>
