--- a/static/css/style.css
+++ b/static/css/style.css
@@ -42,3 +42,12 @@ h1,h2,h3,h4,h5,p{
     height: 10px;
     background-color: rgb(22, 22, 22);
 }
+
+.header-anim{
+    transition: all .2s ease-in-out;
+}
+
+.header-anim:hover{
+    text-shadow: 0px 0px 5px white;
+    cursor: pointer;
+}
