--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,8 @@
     <!-- CSS -->
     <!-- Другие таблицы стилей -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="{{url_for('static',filename='css/swiper/swiper-bundle.css')}}"/>
+
+    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>
 
     
     <!-- Мои таблицы стилей -->
@@ -50,7 +51,7 @@
         
         <div class="container">
             <div id="header-navigation">
-                <h1>Навигационный блок</h1>
+                <h1 class="header-anim">Навигационный блок</h1>
             </div>
             <div class="indent-header"></div>
             <div class="row">
@@ -72,7 +73,7 @@
     <section id="news">
         <div class="container">
             <div id="header-news">
-                <h1>Новости школы</h1>
+                <h1 class="header-anim">Новости школы</h1>
             </div>
             <div class="row">
                 {%for i in range(3)%}
@@ -105,28 +106,9 @@
     </section>
 
     <section id="gallery">
-        <div><h1 class="text-center">Галерея</h1></div>
+        <div><h1 class="text-center header-anim">Галерея</h1></div>
         <div class="container">
-            <div style="position: relative; bottom: 60px;">
-                <h3 class="text-center">Разделы</h3>
-                <div id="panel-posts">
-                    {%for i in range(20)%}
-                        <button type="button">Тема поста {{i}}</button>
-                    {%endfor%}
-                </div>
-            </div>
-    
-            <div class="swiper-gallery">
-                <div class="swiper-wrapper">
-                    {%for i in range(1,4)%}
-                    <div class="swiper-slide">
-                        <div class="gallery-block-img">
-                            <img src="{{url_for('static',filename='img/gallery/test/' + i|string + '.jpg')}}">
-                        </div>
-                    </div>
-                    {%endfor%}
-                </div>
-            </div>
+            
         </div>
 
     </section>
@@ -213,10 +195,10 @@
     <!-- Другие скрипты -->
     <!-- Bootstrap --><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <!-- jQuery --><script src="{{url_for('static',filename='js/jquery-3.6.0.min.js')}}"></script>
-    <!-- Swiper --><script src="{{url_for('static',filename='js/swiper/swiper-bundle.js')}}"></script>
+    <!-- Swiper --><script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
 
     <!-- Мои скрипты -->
-    <script src="{{url_for('static',filename='js/home/gallery.js')}}"></script>
+    <!-- <script src="{{url_for('static',filename='js/home/gallery.js')}}"></script> -->
     <script src="{{url_for('static',filename='js/home/about.js')}}"></script>
 </body>
 </html>
