--- a/static/css/home/gallery.css
+++ b/static/css/home/gallery.css
@@ -1,5 +1,6 @@
 #gallery{
     width: 100%;
+    height: 900px;
     background-color: var(--green);
     padding-top: 30px;
     padding-bottom: 100px;
@@ -7,4 +8,29 @@
 
 #gallery h1{
     margin-bottom: 40px;
+}
+
+.panel{
+    background-color: var(--dark);
+    box-shadow: 2px 2px 20px black;
+    width: 100%;
+    height: 700px;
+    border: 2px solid var(--dark);
+    border-radius: 20px;
+    overflow: hidden;
+    display: flex;
+}
+
+.posts{
+    width: 1290px;
+    margin: 0 auto;
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    overflow-y: scroll;
+}
+
+.posts::-webkit-scrollbar{
+    width: 0px;
 }
