--- a/templates/index.html
+++ b/templates/index.html
@@ -219,6 +219,6 @@
 
     <!-- Мои скрипты -->
     <script src="{{url_for('static',filename='js/home/gallery.js')}}"></script>
-    <script src="{{url_for('static',filename='js/home/about.js')}}"></script>
+    <script src="{{url_for('static',filename='js/home/swiper-about.js')}}"></script>
 </body>
 </html>
