--- a/templates/index.html
+++ b/templates/index.html
@@ -149,7 +149,7 @@
                         </div>
                         <div class="col-10">
                             <div class="main-img">
-                                <img src="">
+                                <img src="{{url_for('ststic', filename='img/gallery/'+data_gallery[0]['photos'][0])}}">
                             </div>
                             <div class="small-img">
                                 
