--- a/static/css/home/gallery.css
+++ b/static/css/home/gallery.css
@@ -65,48 +65,110 @@
     transform: scale(1.05);
 }
 
-.gallery-swiper{
+.gallery-overlay{
+    position: fixed;
     width: 100%;
-    height: 70%;
-    position: relative;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 3;
+    background-color: rgba(0, 0, 0, 0.842);
 }
 
-.gallery-swiper .swiper-slide{
+#gallery-slides{
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 4;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#gallery-slides .slider{
+    width: 1200px;
+    height: 700px;
+    margin-bottom: 200px;
+}
+
+#gallery-slides .slider .slider-wrapper{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#gallery-slides .slider .slider-wrapper #main-slide{
+    width: 100%;
+    height: 100%;
+    min-height: 700px;
     display: flex;
     justify-content: center;
 }
 
-.gallery-swiper img{
-    max-width: 1300px;
+#gallery-slides .slider .slider-wrapper #main-slide img{
+    max-width: 1200px;
     max-height: 700px;
 }
 
-.gallery-swiper img:hover{
-    cursor: grab;
+#gallery-slides .slider .slider-wrapper input{
+    width: 100px;
+    height: 100px;
+    font-size: 50px;
+    color: white;
+    background: none;
+    border: none;
+    transition: all .2s ease-in-out;
 }
 
-.gallery-swiper .swiper-button-prev::after{
-    padding-left: 450px;
-}
-
-.gallery-swiper .swiper-button-next::after{
-    padding-right: 450px;
+#gallery-slides .slider .slider-wrapper input:hover{
+    text-shadow: 0 0 8px white;
 }
 
 /* Миниатуры */
-.small-swiper{
+
+#gallery-slides .slider .slider-small{
+    width: 100%;
+    height: 200px;
     margin-top: 10px;
-}
-.small-swiper .slide{
-    opacity: 0.2;
-    transition: opacity 0.3s ease 0s;
+    display: flex;
+    overflow-x: scroll;
 }
 
-.small-swiper .swiper-slide-thumb-active{
+#gallery-slides .slider .slider-small::-webkit-scrollbar{
+    height: 15px;
+    width: 0px;
+}
+
+#gallery-slides .slider .slider-small img{
+    width: 250px;
+    height: 200px;
+    margin: 0 10px;
+    opacity: 0.5;
+    transition: all .2s ease-in-out;
+}
+
+#gallery-slides .slider .slider-small img:hover{
     opacity: 1;
 }
 
-.small-swiper img{
-    max-width: 250px;
-    max-height: 160px;
+
+#gallery-slides #back{
+    background: none;
+    border: 5px solid white;
+    color: white;
+    border-radius: 50%;
+    font-size: 30px;
+    width: 70px;
+    height: 70px;
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    transition: all .2s ease-in-out;
+}
+
+#gallery-slides #back:hover{
+    box-shadow: 0 0 8px white;
+    text-shadow: 0 0 8px white;
 }
