--- a/static/css/home/navigation-block.css
+++ b/static/css/home/navigation-block.css
@@ -36,6 +36,7 @@
 
 .own-circle img{
     position: absolute;
+    filter: invert();
     width: 100px;
     top: 50%;
     transform: translate(0,-50%);
@@ -43,3 +44,12 @@
 }
 
 .indent-height{margin: 30px 0;}
+
+#navigation-block h3{
+    margin-bottom: 0px;
+}
+
+#navigation-block p{
+    margin-bottom: 60px;
+    font-size: 0.95rem;
+}
