--- a/templates/index.html
+++ b/templates/index.html
@@ -214,7 +214,7 @@
 
     <section id="about">
         <div class="container">
-            <h1 id="header-about">Информация о нас</h1>
+            <h1 id="header-about" class="header-anim">Информация о нас</h1>
             <div class="swiper-about">
                 <div class="swiper-wrapper">
                 {%for i in range(data_teachers|length)%}
