--- a/static/css/home/gallery.css
+++ b/static/css/home/gallery.css
@@ -1,177 +1,363 @@
-#gallery{
-    width: 100%;
-    height: 900px;
-    background-color: var(--green);
-    padding-top: 30px;
-    padding-bottom: 100px;
+@media only screen and (min-width: 1824px){
+    #gallery{
+        width: 100%;
+        height: 900px;
+        background-color: var(--green);
+        padding-top: 30px;
+        padding-bottom: 100px;
+    }
+
+    #header-gallery{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        margin-bottom: 30px;
+    }
+
+    #header-gallery h1{
+        width: 200px;
+    }
+
+    .panel{
+        background-color: var(--dark);
+        box-shadow: 2px 2px 20px black;
+        width: 1330px;
+        height: 700px;
+        border: 5px solid var(--dark);
+        border-radius: 20px;
+        overflow: hidden;
+        display: flex;
+    }
+
+    #gallery h4{
+        text-align: center;
+        transition: all .2s ease-in-out;
+    }
+
+    #posts{
+        width: inherit;
+        margin: 0 auto;
+        height: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        overflow-y: auto;
+    }
+
+    #posts::-webkit-scrollbar{
+        width: 0px;
+        height: 0px;
+    }
+
+    .post{
+        width: 321px;
+        height: 230px;
+        margin-bottom: 10px;
+        background-color: rgba(0, 0, 0, 0.52);
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-blend-mode: multiply;
+        transition: all .2s ease-in-out;
+        display:flex;
+        justify-content:center;
+        align-items:center;
+    }
+    .post:hover h4{
+        transform: scale(1.05);
+    }
+
+    .gallery-overlay{
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        z-index: 3;
+        background-color: rgba(0, 0, 0, 0.842);
+    }
+
+    #gallery-slides{
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 4;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    #gallery-slides .slider{
+        width: 1200px;
+        height: 700px;
+        margin-bottom: 200px;
+    }
+
+    #gallery-slides .slider .slider-wrapper{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    #gallery-slides .slider .slider-wrapper #main-slide{
+        width: 100%;
+        height: 100%;
+        min-height: 700px;
+        display: flex;
+        justify-content: center;
+    }
+
+    #gallery-slides .slider .slider-wrapper #main-slide img{
+        max-width: 1200px;
+        max-height: 700px;
+    }
+
+    #gallery-slides .slider .slider-wrapper input{
+        width: 100px;
+        height: 100px;
+        font-size: 50px;
+        color: white;
+        background: none;
+        border: none;
+        transition: all .2s ease-in-out;
+    }
+
+    #gallery-slides .slider .slider-wrapper input:hover{
+        text-shadow: 0 0 8px white;
+    }
+
+    #gallery-slides .slider .slider-wrapper input:active{
+        transform: scale(0.9);
+    }
+
+    /* Миниатуры */
+
+    #gallery-slides .slider .slider-small{
+        width: 100%;
+        height: 200px;
+        margin-top: 10px;
+        display: flex;
+        overflow-x: scroll;
+    }
+
+    #gallery-slides .slider .slider-small::-webkit-scrollbar{
+        height: 15px;
+        width: 0px;
+    }
+
+    #gallery-slides .slider .slider-small img{
+        width: 250px;
+        height: 200px;
+        margin: 0 10px;
+        opacity: 0.5;
+        transition: all .2s ease-in-out;
+    }
+
+    #gallery-slides .slider .slider-small img:hover{
+        opacity: 1;
+    }
+
+    #gallery-slides #back{
+        background: none;
+        border: 5px solid white;
+        color: white;
+        border-radius: 50%;
+        font-size: 30px;
+        width: 70px;
+        height: 70px;
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        transition: all .1s ease-in-out;
+    }
+
+    #gallery-slides #back:hover{
+        box-shadow: 0 0 8px white;
+        /* text-shadow: 0 0 8px white; */
+    }
 }
 
-#header-gallery{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    margin-bottom: 30px;
-}
+@media only screen and (min-width: 1224px){
+    #gallery{
+        width: 100%;
+        height: 800px;
+        background-color: var(--green);
+        padding-top: 30px;
+        padding-bottom: 100px;
+    }
 
-#header-gallery h1{
-    width: 200px;
-}
+    #header-gallery{
+        width: 100%;
+        margin-bottom: 30px;
+        display: flex;
+        justify-content: center;
+    }
 
-.panel{
-    background-color: var(--dark);
-    box-shadow: 2px 2px 20px black;
-    width: 1330px;
-    height: 700px;
-    border: 5px solid var(--dark);
-    border-radius: 20px;
-    overflow: hidden;
-    display: flex;
-}
+    #header-gallery h1{
+        width: 200px;
+        font-size: 45px;
+    }
 
-#gallery h4{
-    text-align: center;
-    transition: all .2s ease-in-out;
-}
+    .panel{
+        background-color: var(--dark);
+        box-shadow: 2px 2px 20px black;
+        width: 1030px;
+        height: 600px;
+        margin: 0 auto;
+        border: 5px solid var(--dark);
+        border-radius: 20px;
+        overflow: hidden;
+        display: flex;
+    }
 
-#posts{
-    width: inherit;
-    margin: 0 auto;
-    height: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    overflow-y: auto;
-}
+    #gallery h4{
+        text-align: center;
+        transition: all .2s ease-in-out;
+    }
 
-#posts::-webkit-scrollbar{
-    width: 0px;
-    height: 0px;
-}
+    #posts{
+        width: inherit;
+        margin: 0 auto;
+        height: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        overflow-y: auto;
+        justify-content: center;
+    }
 
-.post{
-    width: 321px;
-    height: 230px;
-    margin-bottom: 10px;
-    background-color: rgba(0, 0, 0, 0.52);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-blend-mode: multiply;
-    transition: all .2s ease-in-out;
-    display:flex;
-    justify-content:center;
-    align-items:center;
-}
-.post:hover h4{
-    transform: scale(1.05);
-}
+    #posts::-webkit-scrollbar{
+        width: 15px;
+        height: 0px;
+    }
 
-.gallery-overlay{
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    z-index: 3;
-    background-color: rgba(0, 0, 0, 0.842);
-}
+    .post{
+        width: 250px;
+        height: 190px;
+        background-color: rgba(0, 0, 0, 0.52);
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-blend-mode: multiply;
+        transition: all .2s ease-in-out;
+        display:flex;
+        justify-content:center;
+        align-items:center;
+    }
+    .post:hover h4{
+        transform: scale(1.05);
+    }
 
-#gallery-slides{
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 4;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
+    .gallery-overlay{
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        z-index: 3;
+        background-color: rgba(0, 0, 0, 0.842);
+    }
 
-#gallery-slides .slider{
-    width: 1200px;
-    height: 700px;
-    margin-bottom: 200px;
-}
+    #gallery-slides{
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 4;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
 
-#gallery-slides .slider .slider-wrapper{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
+    #gallery-slides .slider{
+        margin-top: 200px;
+        width: 1200px;
+        height: 700px;
+        margin-bottom: 200px;
+    }
 
-#gallery-slides .slider .slider-wrapper #main-slide{
-    width: 100%;
-    height: 100%;
-    min-height: 700px;
-    display: flex;
-    justify-content: center;
-}
+    #gallery-slides .slider .slider-wrapper{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
 
-#gallery-slides .slider .slider-wrapper #main-slide img{
-    max-width: 1200px;
-    max-height: 700px;
-}
+    #gallery-slides .slider .slider-wrapper #main-slide{
+        width: 100%;
+        height: 100%;
+        min-height: 500px;
+        max-width: 1000px;
+        display: flex;
+        justify-content: center;
+    }
 
-#gallery-slides .slider .slider-wrapper input{
-    width: 100px;
-    height: 100px;
-    font-size: 50px;
-    color: white;
-    background: none;
-    border: none;
-    transition: all .2s ease-in-out;
-}
+    #gallery-slides .slider .slider-wrapper #main-slide img{
+        max-height: 500px;
+        max-width: 1000px;
+    }
 
-#gallery-slides .slider .slider-wrapper input:hover{
-    text-shadow: 0 0 8px white;
-}
+    #gallery-slides .slider .slider-wrapper input{
+        width: 100px;
+        height: 100px;
+        font-size: 50px;
+        color: white;
+        background: none;
+        border: none;
+        transition: all .2s ease-in-out;
+    }
 
-#gallery-slides .slider .slider-wrapper input:active{
-    transform: scale(0.9);
-}
+    #gallery-slides .slider .slider-wrapper input:hover{
+        text-shadow: 0 0 8px white;
+    }
 
-/* Миниатуры */
+    #gallery-slides .slider .slider-wrapper input:active{
+        transform: scale(0.9);
+    }
 
-#gallery-slides .slider .slider-small{
-    width: 100%;
-    height: 200px;
-    margin-top: 10px;
-    display: flex;
-    overflow-x: scroll;
-}
+    /* Миниатуры */
 
-#gallery-slides .slider .slider-small::-webkit-scrollbar{
-    height: 15px;
-    width: 0px;
-}
+    #gallery-slides .slider .slider-small{
+        width: 100%;
+        height: 150px;
+        margin-top: 10px;
+        display: flex;
+        overflow-x: scroll;
+    }
 
-#gallery-slides .slider .slider-small img{
-    width: 250px;
-    height: 200px;
-    margin: 0 10px;
-    opacity: 0.5;
-    transition: all .2s ease-in-out;
-}
+    #gallery-slides .slider .slider-small::-webkit-scrollbar{
+        height: 13px;
+        width: 0px;
+    }
 
-#gallery-slides .slider .slider-small img:hover{
-    opacity: 1;
-}
+    #gallery-slides .slider .slider-small img{
+        max-width: 200px;
+        max-height: 150px;
+        /* object-fit: fill; */
+        margin: 0 10px;
+        opacity: 0.5;
+        transition: all .2s ease-in-out;
+    }
 
-#gallery-slides #back{
-    background: none;
-    border: 5px solid white;
-    color: white;
-    border-radius: 50%;
-    font-size: 30px;
-    width: 70px;
-    height: 70px;
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    transition: all .1s ease-in-out;
-}
+    #gallery-slides .slider .slider-small img:hover{
+        opacity: 1;
+    }
 
-#gallery-slides #back:hover{
-    box-shadow: 0 0 8px white;
-    /* text-shadow: 0 0 8px white; */
+    #gallery-slides #back{
+        background: none;
+        border: 5px solid white;
+        color: white;
+        border-radius: 50%;
+        font-size: 30px;
+        width: 60px;
+        height: 60px;
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        transition: all .1s ease-in-out;
+    }
+
+    #gallery-slides #back:hover{
+        box-shadow: 0 0 8px white;
+        /* text-shadow: 0 0 8px white; */
+    }
 }
