--- a/static/css/home/navigation-block.css
+++ b/static/css/home/navigation-block.css
@@ -1,55 +1,115 @@
-#navigation-block{
-    background-color: var(--green);
-    width: 100%;
-    min-height: 650px;
+@media screen and (min-width: 1824px){
+    #navigation-block{
+        background-color: var(--green);
+        width: 100%;
+        min-height: 650px;
+    }
+
+    #header-navigation{
+        display: block;
+        width: 510px;
+        margin: 0 auto;
+    }
+
+    #header-navigation h1{
+        padding-top: 30px;
+        margin-bottom: 30px;
+        text-align: center;
+    }
+
+    .own-circle{
+        width: 140px;
+        height: 140px;
+        border: rgb(255, 255, 255) solid 3px;
+        border-radius: 100px;
+        display: flex;
+        justify-content: center;
+        position: relative;
+        margin: 0 auto;
+        transition: all .2s ease-in-out;
+        cursor: pointer;
+    }
+
+    .own-circle:hover{
+        transform: scale(1.05);
+        box-shadow: 0 0 10px white;
+    }
+
+    .own-circle img{
+        position: absolute;
+        filter: invert();
+        width: 100px;
+        top: 50%;
+        transform: translate(0,-50%);
+        padding: auto;
+    }
+
+    .indent-height{margin: 30px 0;}
+
+    #navigation-block h3{
+        margin-bottom: 0px;
+    }
+
+    #navigation-block p{
+        margin-bottom: 60px;
+        font-size: 0.95rem;
+    }
 }
 
-#header-navigation{
-    display: block;
-    width: 510px;
-    margin: 0 auto;
-}
+@media screen and (min-width: 1224px){
+    #navigation-block{
+        background-color: var(--green);
+        width: 100%;
+        height: 590px;
+    }
 
-#header-navigation h1{
-    padding-top: 30px;
-    margin-bottom: 30px;
-    text-align: center;
-}
+    #header-navigation{
+        display: block;
+        width: 470px;
+        margin: 0 auto;
+    }
 
-.own-circle{
-    width: 140px;
-    height: 140px;
-    border: rgb(255, 255, 255) solid 3px;
-    border-radius: 100px;
-    display: flex;
-    justify-content: center;
-    position: relative;
-    margin: 0 auto;
-    transition: all .2s ease-in-out;
-    cursor: pointer;
-}
+    #header-navigation h1{
+        padding-top: 30px;
+        margin-bottom: 30px;
+        font-size: 45px;
+        text-align: center;
+    }
 
-.own-circle:hover{
-    transform: scale(1.05);
-    box-shadow: 0 0 10px white;
-}
+    .own-circle{
+        width: 130px;
+        height: 130px;
+        border: rgb(255, 255, 255) solid 3px;
+        border-radius: 100px;
+        display: flex;
+        justify-content: center;
+        position: relative;
+        margin: 0 auto;
+        transition: all .2s ease-in-out;
+        cursor: pointer;
+    }
 
-.own-circle img{
-    position: absolute;
-    filter: invert();
-    width: 100px;
-    top: 50%;
-    transform: translate(0,-50%);
-    padding: auto;
-}
+    .own-circle:hover{
+        transform: scale(1.05);
+        box-shadow: 0 0 10px white;
+    }
 
-.indent-height{margin: 30px 0;}
+    .own-circle img{
+        position: absolute;
+        filter: invert();
+        width: 90px;
+        top: 50%;
+        transform: translate(0,-50%);
+    }
 
-#navigation-block h3{
-    margin-bottom: 0px;
-}
+    .indent-height{margin: 30px 0;}
 
-#navigation-block p{
-    margin-bottom: 60px;
-    font-size: 0.95rem;
+    #navigation-block h3{
+        margin-bottom: 0px;
+    }
+
+    #navigation-block p{
+        margin-bottom: 30px;
+        font-size: 0.95rem;
+    }
 }
