--- a/static/css/home/news.css
+++ b/static/css/home/news.css
@@ -1,94 +1,190 @@
-#news{
-    min-height: 620px;
-    background-color: rgba(0, 0, 0, 0.465);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-    background-blend-mode: multiply;
+@media only screen and (min-width: 1824px){
+    #news{
+        min-height: 620px;
+        background-color: rgba(0, 0, 0, 0.465);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-attachment: fixed;
+        background-blend-mode: multiply;
+    }
+
+    #news h1,h2,h3,h4,h5,p{
+        color:white;
+    }
+
+
+    #header-news{
+        text-align: center;
+        padding-top: 70px;
+        padding-bottom: 50px;
+    }
+
+
+    #header-news h1{
+        display: block;
+        width: 380px;
+        margin: 0 auto;
+    }
+
+    .card-news{
+        margin: 0 auto;
+        width: 350px;
+        box-shadow: 2px 2px 10px rgba(24, 24, 24, 0.239);
+        background-color: rgba(26, 26, 26, 0.459);
+        transition: all .2s ease-in-out;
+    }
+
+    .card-news:hover{
+        box-shadow: 0 0 15px rgb(95, 95, 95);
+    }
+
+    .block-img{
+        width: 330px;
+        height: 200px;
+        position: relative;
+        overflow: hidden;
+    }
+
+    .preview-img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
+    .card-body{
+        backdrop-filter: blur(8px);
+        padding: 10px 20px 20px 20px;
+    }
+
+    .card-title{
+        transform: scale(1);
+    }
+
+    .card-title-hover{
+        transition: all .5 ease-in-out;
+        transform: scale(1.1);
+    }
+
+    .card-img{
+        height: 170px;
+        position: relative;
+        overflow: hidden;
+        background-size: cover;
+    }
+
+    .card-text{
+        font-weight: 300px;
+    }
+
+    .block-btn{
+        width: 140px;
+        margin: 0 auto;
+    }
+
+    .btn-more{
+        background-color: rgb(68, 163, 68);
+        color:white;
+        width: 100%;
+        transition: all .2s ease-in-out;
+    }
+
+    .btn-more:hover{
+        box-shadow: 0 0 10px rgb(68, 163, 68);
+        transform: scale(1.05);
+        color:white;
+    }
 }
 
-#news h1,h2,h3,h4,h5,p{
-    color:white;
-}
+@media only screen and (min-width: 1224px){
+    #news{
+        min-height: 620px;
+        background-color: rgba(0, 0, 0, 0.465);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-attachment: fixed;
+        background-blend-mode: multiply;
+    }
+
+    #news h1,h2,h3,h4,h5,p{
+        color:white;
+    }
 
 
-#header-news{
-    text-align: center;
-    padding-top: 70px;
-    padding-bottom: 50px;
-}
+    #header-news{
+        text-align: center;
+        padding-top: 70px;
+        padding-bottom: 50px;
+    }
 
 
-#header-news h1{
-    display: block;
-    width: 380px;
-    margin: 0 auto;
-}
+    #header-news h1{
+        display: block;
+        font-size: 45px;
+        width: 380px;
+        margin: 0 auto;
+    }
 
-.card-news{
-    margin: 0 auto;
-    width: 350px;
-    box-shadow: 2px 2px 10px rgba(24, 24, 24, 0.239);
-    background-color: rgba(26, 26, 26, 0.459);
-    transition: all .2s ease-in-out;
-}
+    .card-news{
+        margin: 0 auto;
+        width: 320px;
+        box-shadow: 2px 2px 10px rgba(24, 24, 24, 0.239);
+        background-color: rgba(26, 26, 26, 0.459);
+        transition: all .2s ease-in-out;
+    }
 
-.card-news:hover{
-    box-shadow: 0 0 15px rgb(95, 95, 95);
-}
+    .card-news:hover{
+        box-shadow: 0 0 15px rgb(95, 95, 95);
+    }
 
-.block-img{
-    width: 330px;
-    height: 200px;
-    position: relative;
-    overflow: hidden;
-}
+    .block-img{
+        width: 330px;
+        height: 200px;
+        position: relative;
+        overflow: hidden;
+    }
 
-.preview-img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
+    .preview-img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
 
-.card-body{
-    backdrop-filter: blur(8px);
-    padding: 10px 20px 20px 20px;
-}
+    .card-body{
+        backdrop-filter: blur(4px);
+        padding: 10px 20px 20px 20px;
+    }
 
-.card-title{
-    transform: scale(1);
-}
+    .card-title{
+        font-size: 30px;
+    }
 
-.card-title-hover{
-    transition: all .5 ease-in-out;
-    transform: scale(1.1);
-}
+    .card-img{
+        height: 170px;
+        position: relative;
+        overflow: hidden;
+        background-size: cover;
+    }
 
-.card-img{
-    height: 170px;
-    position: relative;
-    overflow: hidden;
-    background-size: cover;
-}
+    .card-text{
+        font-size: 18px;
+        font-weight: 300px;
+    }
 
-.card-text{
-    font-weight: 300px;
-}
+    .block-btn{
+        width: 140px;
+        margin: 0 auto;
+    }
 
-.block-btn{
-    width: 140px;
-    margin: 0 auto;
-}
+    .btn-more{
+        background-color: rgb(68, 163, 68);
+        color:white;
+        width: 100%;
+        transition: all .2s ease-in-out;
+    }
 
-.btn-more{
-    background-color: rgb(68, 163, 68);
-    color:white;
-    width: 100%;
-    transition: all .2s ease-in-out;
-}
-
-.btn-more:hover{
-    box-shadow: 0 0 10px rgb(68, 163, 68);
-    transform: scale(1.05);
-    color:white;
+    .btn-more:hover{
+        box-shadow: 0 0 10px rgb(68, 163, 68);
+        transform: scale(1.05);
+        color:white;
+    }
 }
