--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,7 +13,7 @@
 }
 
 ::-webkit-scrollbar-thumb{
-    border-radius: 10px;
+    /* border-radius: 10px; */
     background-color: white;
     border: 3px solid var(--dark);
 }
@@ -49,6 +49,6 @@ h1,h2,h3,h4,h5,p{
 }
 
 .header-anim:hover{
-    text-shadow: 0px 0px 5px white;
+    text-shadow: 0px 0px 2px white;
     cursor: pointer;
 }
